Purchase order refactoring
